--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <title>wordplay</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
 
-    <script src="/src/index.tsx" type="module"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta property="og:title" content="wordplay" />
+  <meta property="og:description" content="multiplayer word games! developed by skeary.me">
+  <meta property="og:type" content="website" />
+  <meta name='twitter:title' content='wordplay' />
+  <meta name='twitter:description' content='multiplayer word games! developed by skeary.me' />
+  <title>wordplay</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+  <script src="/src/index.tsx" type="module"></script>
+</body>
+
 </html>
